<resources>
    <string name="app_name">ProjectPC</string>
    <string name="app_version">0.87 alpha</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navigation drawer -->
    <string name="drawer_home">Home</string>
    <string name="drawer_inbox">Inbox</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_sign_out">Sign out</string>
    <string name="drawer_internal">Internal</string>
    <string name="drawer_storage">Storage</string>
    <string name="drawer_external">External</string>

    <!-- Categories -->
    <string name="category_cpu">CPU</string>
    <string name="category_ram">RAM</string>
    <string name="category_motherboard">Motherboard</string>
    <string name="category_gpu">GPU</string>
    <string name="category_power_supply">Power Supply</string>
    <string name="category_cooling">Cooling</string>
    <string name="category_hdd">HDD</string>
    <string name="category_ssd">SSD</string>
    <string name="category_peripherals">Peripherals</string>
    <string name="category_monitor">Monitor</string>
    <string name="category_case">Case</string>
    <string name="category_misc">Miscellaneous</string>

    <!-- Currencies -->
    <string-array name="currencies">
        <item>CAD</item>
        <item>USD</item>
        <item>EUR</item>
    </string-array>

    <!-- Startup activity -->
    <string name="prompt_loading">Loading…</string>

    <!-- Login activity -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_wait">Please wait…</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Not a member? <u>Register here</u></string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password is too short</string>
    <string name="error_invalid_credentials">Invalid email or password</string>
    <string name="error_incorrect_password">Password is incorrect</string>
    <string name="error_field_required">Field is required</string>

    <!-- Register activity -->
    <string name="title_activity_register">Register</string>
    <string name="prompt_user_name">User Name</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_confirm_register">Are you sure you wish to create this account?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="error_invalid_user_name">Invalid username</string>
    <string name="error_invalid_first_name">Invalid first name</string>
    <string name="error_invalid_last_name">Invalid last name</string>
    <string name="error_passwords_no_match">Passwords do not match</string>
    <string name="error_user_already_exists">User already exists</string>
    <string name="action_create_account">Create Account</string>
    <string name="action_login">Already a member? <u>Login here</u></string>

    <!-- Inbox activity -->
    <string name="title_activity_inbox">Inbox</string>

    <!-- Edit/Post Ad activity -->
    <string name="title_activity_edit_ad">Edit Ad</string>
    <string name="title_activity_post_ad">Post Ad</string>
    <string name="title_activity_post_in">Posting in %s</string>
    <string name="action_edit_ad">Save Changes</string>
    <string name="action_post_ad">Post Ad</string>
    <string name="action_set_primary">Set as thumbnail</string>
    <string name="action_remove">Remove</string>
    <string name="prompt_image_options">Image Options</string>
    <string name="prompt_select_image">Select an image</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_price">Price</string>
    <string name="prompt_location">Location</string>
    <string name="prompt_enter_tags">Enter tags</string>
    <string name="prompt_discard_post">Are you sure you want to discard this post?</string>
    <string name="prompt_discard_post_changes">Are you sure you want to discard the changes?</string>
    <string name="prompt_are_you_sure_post">Are you sure you want to post this ad?</string>
    <string name="error_invalid_title">Invalid title</string>
    <string name="error_invalid_description">Invalid description</string>
    <string name="error_invalid_price">Invalid price</string>
    <string name="error_invalid_location">Invalid location</string>
    <string name="error_unable_open_image">Unable to open image. Check permissions.</string>
    <string name="title_progress_posting">Posting…</string>
    <string name="prompt_ad_posted">Your ad has been posted.</string>

    <!-- Show Ad -->
    <string name="title_activity_show_ad">Show Ad</string>
    <string name="show_ad_description">Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang
    Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang
        Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang
        Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang
        Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang
        Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang
        Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang
        Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang
        Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang
        Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang
        Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang
        Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang
        Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang
        Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang
        Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang
        Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang
        Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang Gucci Gang
    </string>

    <!-- Search -->
    <string name="title_activity_search">Search</string>
    <string name="title_activity_search_for">Showing results for %s</string>

    <!-- Menu -->
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>

    <!-- Message activity -->
    <string name="title_activity_message">Message</string>
    <string name="prompt_enter_message">Enter message</string>

    <!-- Settings activity -->
    <string name="title_activity_settings">Settings</string>
    <string name="prompt_notifications">Notifications</string>
    <string name="action_clear_cache_button">Clear Cache</string>
    <string name="action_clear_bookmarks_button">Clear Bookmarks</string>
    <string name="prompt_select_ringtone">Ringtone</string>
    <string name="prompt_select_silent">Silent</string>

    <string name="prompt_choose_ringtone">Choose notification sound</string>
    <string name="prompt_about">About</string>
    <string name="prompt_about_text">ProjectPC was created by a group of 4 friends to help other
    students like ourselves find quality, affordable computer parts.</string>
    <string name="prompt_version">Version</string>
    <string name="prompt_choose_email_client">Choose email client</string>
    <string name="prompt_default_storage">Default Storage</string>
    <string name="prompt_message_sound">New message notification</string>
    <string name="prompt_select_vibrate">Vibrate</string>
    <string name="prompt_choose_vibrate">Vibrate on new notification</string>

    <!-- Alert -->
    <string name="title_alert_cancel">Cancel?</string>
    <string name="title_alert_discard">Discard?</string>
    <string name="title_alert_are_you_sure">Are you sure?</string>

    <!-- Service -->
    <string name="service_internal_error">Internal error</string>
    <string name="service_unauthorized">Unauthorized</string>
    <string name="service_image_limit">Image limit reached</string>
    <string name="service_unable_to_connect">Unable to connect to server</string>
    <string name="service_unable_to_process_request">Unable to process request</string>

    <!-- Permissions -->
    <string name="permissions_request_denied">Requested permission denied</string>

</resources>
