<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.projectpc.projectpc.ui.EditAdActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="horizontal"
                android:padding="@dimen/post_image_padding">

                <!-- ImageViews will go here automatically -->
                <LinearLayout
                    android:id="@+id/edit_post_image_container"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" />

            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_padding">

                <!-- Title Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_layout_padding"
                    android:layout_marginBottom="@dimen/input_layout_padding">

                    <EditText
                        android:id="@+id/edit_post_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:hint="@string/prompt_title" />

                </android.support.design.widget.TextInputLayout>

                <!-- Description -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_layout_padding"
                    android:layout_marginBottom="@dimen/input_layout_padding">

                    <EditText
                        android:id="@+id/edit_post_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:minLines="1"
                        android:lines="8"
                        android:hint="@string/prompt_description" />

                </android.support.design.widget.TextInputLayout>

                <!-- Currency -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/edit_post_currencies"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:entries="@array/currencies" />

                    <!--Price-->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edit_post_price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_price"
                            android:inputType="numberDecimal" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <!-- Location -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_layout_padding"
                    android:layout_marginBottom="@dimen/input_layout_padding">

                    <EditText
                        android:id="@+id/edit_post_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:hint="@string/prompt_location" />

                </android.support.design.widget.TextInputLayout>

                <!-- Tags -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_layout_padding"
                    android:layout_marginBottom="@dimen/input_layout_padding">

                    <!-- TODO: No spaces -->
                    <!-- TODO: Replace with -->
                    <!-- compile 'com.github.pchmn:MaterialChipsInput:1.0.8' -->
                    <me.gujun.android.taggroup.TagGroup
                        android:id="@+id/edit_post_tags"
                        app:atg_isAppendMode="true"
                        app:atg_borderColor="@color/colorAccent"
                        app:atg_textColor="@color/colorAccent"
                        style="@style/TagGroup" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/edit_post_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_save_white"
        android:onClick="onPost" />

</android.support.design.widget.CoordinatorLayout>